# veloren-mod-panel

./: .gitignore  Cargo.toml  README.md  Rocket.toml
db/logs/migrations/: 20221203_create-tables.sql
src/: main.rs  veloren.rs
static/: live_chat.js  player_list.js  style.css  user_chat_log.js
templates/: head.hbs  home.html.hbs  live_chat.hbs  user.html.hbs  user_not_found.html.hbs
